# propaganda

./: #Makefile#  .autoenv  .env.example  .gitignore  INIT_back.sh  INIT_front.sh  LICENSE  MKindexes.js  MKindexes.sh  MKindexes2.sh  Makefile  README.md  RUNME.sh  RUNSERV.sh  article_cleaning_report_20260331_205132.txt  article_cleaning_report_20260403_080042.txt  article_cleaning_report_20260403_190706.txt  article_cleaning_report_20260405_205929.txt  article_cleaning_report_20260407_200642.txt  cypher_to_graph.py  doc_generator.py  doc_updater.py  flairtest.sh  go.mod  go.sum  main.go  mempalace.yaml  package.json  parallel2.zsh  process_python_files.py  py_files.txt  python_files_to_document.txt  user_agent_stats.txt
LoRA-server/: server.py
LoRA-train/: README.md  mongo2lora.py  test_lora.py  train_lora.py
back/: INIT.sh  MKindexes.js  package-lock.json  package.json  server.js
config/: big.tsv  kill.tsv  test.tsv
dashboard/: .autoenv  README.md  app.py  requirements.txt
db/: #clean.pl#  #report.py#  .autoenv  README.md  README_convert_to_vec.md  ai_ollama.py  allbatch.sh  ans  antichrist.sh  article_cleaning_report_20260228_182342.txt  b.sh  bakbatch.sh  batch.sh  batchquery.sh  batchquerysmallest.sh  chroma_browser.py  clean.pl  clean_article_text.py  clustervec2md.sh  convert_to_vec.py  cypher_output.txt  cypher_prompt.txt  cypher_prompt_rel.txt  cypher_to_graph.py  dbscan.sh  dedupe.py  demo_timeout.sh  distribute.py  dot2png.py  dump_ids.py  extract_ids.py  g.sh  gaza.sh  gemini.py  geminize.py  graph.txt  groqai.py  hybrid.py  hybrid_batch.tsv  id_proc_mlx.py  (+57 more)
db/output/: afghanistan.cypher  afghanistan.ids  afghanistan.reporter  afghanistan.vec  antichrist.ids  antifa.cypher  antifa.ids  antifa.reporter  arcticfrost.cypher  arcticfrost.ids  arcticfrost.reporter  argentina.cypher  argentina.ids  argentina.reporter  argentina.vec  bolivia.cypher  bolivia.ids  bolivia.reporter  bolivia.vec  cambodia.cypher  cambodia.ids  cambodia.reporter  (+183 more)
dbscan/: README.md  categorizer.py  chroma_manager.py  config.py  embeddings.py  file_handler.py  last3.tsv  last5.tsv  last7.tsv  main.py  process.sh  requirements.txt  sorting_articles.tsv  test.sh
docs/: dashboard.md  geminize.md  hybrid.md  main_go.md  makefile.dot  makefile.md  mgm.md  mongo2chroma.md  ollamaai.md  report.md
front/: package-lock.json  package.json
llm/: .autoenv  README.md  bias_processor.py  biglcrcove.sh  center_out.txt  centerstrong.txt  commercial_bias_comparison.py  gemini_models.txt  gemini_quota.py  geminiai_listmodels.py  groqtest.py  id_proc_mlx.py  lcr.txt  lcr_cen.sh  lcr_cove_llms.sh  lcr_left.sh  lcr_right.sh  lcrllms.sh  left_out.txt  leftstrong.txt  lfm_ai.py  lfm_ai_mlx.py  llms.txt  llms_all.txt  llms_big.txt  llms_sm.txt  mkreporter.pl  mlxtest.py  mongo_rw.py  output.txt  prompt0.txt  prompt_svo_gaza.txt  right_out.txt  rightstrong.txt  rm_reporters.sh  slave.py  start_llama-server.sh  svo_big_test.sh  svo_test.sh  test_cats.sh  (+10 more)
mgm/: enhanced_mgm.py  enhanced_mgm.py.bak  gaza_script.txt  mgm.py  mkgaza.sh  mkscript.py  requirements.txt  super_mgm.py
mp3/: batch.sh  jsonl2mp3.py  mkbatch.pl  mkmkbatch.sh  test.jsonl  text2mp3.py  ttskokoro.py
ner/: .autoenv  Dockerfile  RUNME.sh  build.sh  distributener.sh  main.py  ner.py  processor.py  requirements.txt  run.sh
rating/: README.md  rating.py  requirements.txt
redist/: train_bias_detector.py
semantic/: .autoenv  claude0.py  clean_install.py  clear_model_cache.py  complete_fix.sh  diagnosse_model.py  exact_colab_setup.sh  force_pytorch_format.py  lastfix.sh  orig.py  orig_colab_style.py  req2.txt  requirements.txt  semantic.py  trans_cos.py  working_loader.py
t5/: .autoenv  .dockerignore  .env.example  .gitignore  BiasDetectorInference.py  BiasDetectorInference_MPS.py  Dockerfile  README.md  README_Quickref.md  README_mps.md  TRAINING_DATA_GUIDE.md  bias_detector.py  bias_detector_mps_optimized.py  diagnose_model.py  docker-compose.yml  generate_synthetic_training.py  mongo2training.py  mongo2training_balanced.py  pyproject.toml  requirements.txt  requirements_oldmacx86.txt  run_training.sh  server_mps.py  test_BiasDetectorInference.sh  test_BiasDetectorInference_MPS.sh  test_bias_detector.sh  test_bias_detector_mps_optimized.sh  test_mongo2training.sh  test_telemetry.py  train_bias_detector.py  train_lora.sh  validate_training_data.py
t5/.github/workflows/: ci.yml
t5/bias-detector-output/: adapter_config.json  device_info.json  tokenizer.json
t5/bias-detector-output-new/checkpoint-1500/: README.md
t5/bias_detector/: __init__.py  cli.py  processor.py  validator.py
t5/browser-extension/: README.md  background.js  build-icons.sh  content.js  content.js.working-backup  history.html  history.js  options.css  options.html  options.js  overlay.css  popup.css  popup.html  popup.js  test-caption-capture.js  test-parse-new.js  test-youtube-captions.js
t5/cline/: DOCUMENTATION.md  LICENSE  NEW_USER_INSTALL.md  README.md  VSCODE_GUIDE.md  bias_stdin.py  build_package.sh  demo_local_llm_bias.py  demo_mcp_client.py  demo_ollama_bias.py  install_mcp_vscode.sh  publish_pypi.sh  publish_testpypi.sh  pyproject.toml  test_bias_server.py
t5/cline/examples/: example_python_usage.py
t5/cline/src/cline_bias_server/: __init__.py  bias_engine.py  cli.py  server.py
t5/cline/src/mcp_bias_server/: bias_engine.py  cli.py  server.py
t5/cline/tests/: test_bias_engine.py
t5/docker-inference/: .dockerignore  Dockerfile.cpu  Dockerfile.mps  README.md  app_cpu.py  app_mps.py  docker-compose.yml  requirements_cpu.txt  requirements_mps.txt
t5/mcp_bias_server/: DOCUMENTATION.md  INSTALL_TEST_GUIDE.md  README.md  STANDALONE_INSTALL.md  VSCODE_GUIDE.md  analyze_article.py  bias_stdin.py  build_package.sh  demo_ollama_bias.py  install.sh  publish_pypi.sh  pyproject.toml
t5/mcp_bias_server/src/mcp_bias_server/: __init__.py  bias_engine.py  cli.py  server.py
t5/mcp_bias_server/tests/: __init__.py  test_bias_engine.py
t5/tests/: __init__.py  test_processor.py
vec/: doenv.sh  install_memgraph.sh  mongo2memgraph.py  requirements.txt
(+56 files in other folders)
